# NRF_DATABASE_RESEARCH

./: .gitignore  CMakeLists.txt  LICENSE  README.md
MYSQL/: Interface.h  main.cpp
MYSQL/Benchmark/: Benchmark.cc
MYSQL/Interface/: Interface.h  MYSQLConnector.h  main.cpp
MongoDB/: Interface  MongoDBConnector.h  MongoDBInterface.cpp  MongoDBInterface.h  benchmark  benchmark.cc  data_model.json  mongod_conn.cpp  mongod_conn.h
MongoDB/Benchmark/: Benchmarks.cc  Readme.md
MongoDB/GoogleTests/: Test.cpp
MongoDB/Interface/: MongoDBConnector.h  Readme.md  examples.cpp
ProfileCreator/: ProfileCreator.h  main  main.cpp
ProjectReport/: Report plan.docx
RedisDB/: RedisDBInterface.cpp
RocksDB/: RocksDBInterface.cpp  RocksDBInterface.h  Rockspackage.h
UUID/: UUIDv4.h
UUIDv4/: UUIDv4.h  main.cpp
benchmarks/: data_model.json
benchmarks/Mongo/: CMakeLists.txt  bench_mongo.cpp
benchmarks/Redis/: bench_redis.cpp
benchmarks/Rocks/: CMakeLists.txt  bench_rocks.cpp
couchbase/: CMakeLists.txt  homebrew.cmake
couchbase/benchmark/: couchbaseBench.cpp
couchbase/data/: test.json
couchbase/include/: couchbase.h
couchbase/src/: CMakeLists.txt  couchbase.cpp  main.cpp
couchbase/test/: couchbaseTest.cpp
include/: DBInterface.h  createDB.h
interface/: main.cpp
interface/MYSQL/: MYSQInterface.h  MYSQLInterface.cpp
interface/MongoDB/: CMakeLists.txt  MongoDBInterface.h
interface/RedisDB/: CMakeLists.txt  RedisDBInterface.h  nfTypes.h  redis_conn.cpp  redis_conn.h
interface/RedisDB/include/: RedisDBInterface.h  redis_conn.h
interface/RedisDB/src/: RedisDBInterface.cpp  redis_conn.cpp
interface/RocksDB/: CMakeLists.txt  CRUDparams.h  README.md  RocksDBInterface.cpp  RocksDBInterface.h  Rockspackage.h
interface/benchmarks/: README.md
interface/benchmarks/MYSQL/: bench_mysql.cpp
interface/benchmarks/Mongo/: bench_mongo.cpp
interface/benchmarks/Redis/: CMakeLists.txt  bench_redis.cpp
interface/benchmarks/Rocks/: bench_rocks.cpp
interface/benchmarks/couchbase/: bench_settings.h  couchbaseBench.cpp
interface/couchbase/benchmark/: couchbaseBench.cpp
interface/couchbase/data/: test.json
interface/couchbase/include/: couchbase.h
interface/couchbase/src/: couchbase.cpp  main.cpp
interface/couchbase/test/: couchbaseTest.cpp
interface/include/: connection.h
interface/tests/: README.md
interface/tests/Mongo/: test_main.cpp  test_mongo.cpp
interface/tests/Redis/: CMakeLists.txt  test_main.cpp  test_redis.cpp
interface/tests/Rocks/: test_rocks.cpp
interface/tests/couchbase/: couchbaseTest.cpp
materials/: Benchmarks.ipynb  Report3.pptx  Report4.pptx
materials/.ipynb_checkpoints/: Benchmarks-checkpoint.ipynb
project_nrf/: config.h  connection.h  test.h
project_nrf/MongoDB/: mongod_conn.cpp  mongod_conn.h
project_nrf/MongoDBinterface/: MongoDBinterface.h  Read.me  Test.cpp
redisdb/: CMakeLists.txt
redisdb/benchmark/: CMakeLists.txt  bench_main.cpp  bench_settings.h  readme.md  report.md
redisdb/data/: config_file.json  config_file_arr.json  data_model.json
redisdb/include/: RedisDBInterface.h  nfTypes.h  redis_conn.h  redis_find.h
redisdb/src/: RedisDBInterface.cpp  main.cpp  redis_conn.cpp  redis_find.cpp
redisdb/test/: CMakeLists.txt  test_main.cpp
redisdb/test/test_code/: readme.md  redis_test.cpp
redisdb/test/test_code/data/: 1profile.json  1profile_wrong_key.json  1profile_wrong_value.json  2nfinstance.json  config_file_test.json  nfinstance.json
src/interface/: nf_profile.h  nf_profile_repo.cpp  nf_profile_repo.h
tests/Mongo/: CMakeLists.txt
tests/Redis/: CMakeLists.txt  test_redis.cpp
tests/Rocks/: CMakeLists.txt
tests/data/: data_base.json
